2004-08-01 16:10 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridtestcadparameters_) increased node and
	parameter tolerences. Project to face first to get the edge xyz.

2004-87-01 15:39 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridRelaxNegativeCells) added a bool argument to
	optionally dump out tecplot surface and negative volume plots.

2004-07-22 14:10 Mike Park  <mike.park@nasa.gov>

	* src/gridfortran.c (gridparallelrelaxneg_) exposed
	gridRelaxNegativeCells.

2004-07-31 16:05 Mike Park  <mike.park@nasa.gov>

	* src/main.c put in calls to gridRelaxNegativeCells and made the
	gridmove test harder.

2004-07-31 15:06 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridRelaxNegativeCells) finds negative cells and
	calls gridSmoothVolumeNearNode in vicinity.
	* src/gridcad.c (gridSmoothVolumeNearNode) calls
	gridSmoothNodeVolume up to two cells out.
	
2004-07-31 14:38 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c (gridmoveRelaxation) sequential generalized grid
	relaxation driver with residual screen echo.

2004-07-31 13:36 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmoothNodeVolume) general routine for
	modifying node location for improving small (negative) cell
	volume.
	* src/gridcad.c (gridSmoothNodeVolumeSimplex) Simplex optimization
	for improving small (negative) cell volume.
	
2004-07-29 08:22 Mike Park  <mike.park@nasa.gov>

	* src/gridmetric.c (gridNodeVolume) added for volume optimzation.
	* src/gridcad.c (gridSmartVolumeLaplacian) SL for volume optimzation
	
2004-07-27 17:05 Mike Park  <mike.park@nasa.gov>

	* example/Makefile.am added om6p01 testcase to dist.
	
2004-07-26 17:36 Mike Park  <mike.park@nasa.gov>

	* src/gridmove.c (gridmoveElasticRelaxationStartStep) Set R =
	MIN(sqrt(AR),5.0). Varible R seems to reduce the number of
	negative volumes. Setting the Max R at 10 caused the Ax=B system
	to go unstable.

2004-07-26 14:38 Mike Park  <mike.park@nasa.gov>
