@@ -280,10 +280,17 @@ void gridparallelsmooth_( int *processor,
 
 void gridparallelrelaxneg_( int *processor )
 {
-  gridRelaxNegativeCells( grid, FALSE );
+  GridBool localOnly;
+  localOnly = (-1 == (*processor));
+  gridParallelRelaxNegativeCells(grid, localOnly);
 #ifdef PARALLEL_VERBOSE 
-  printf( " %6d smooth negative volumes          %s   Vol%14.10f\n",
-	  gridPartId(grid),"everything        ",gridMinVolume(grid) );
+  if (localOnly) {
+    printf( " %6d relaxN volume and face interior  %s    AR%14.10f\n",
+	    gridPartId(grid),"local only        ",gridMinVolume(grid) );
+  } else {
+    printf( " %6d relaxN volume and face interior  %s    AR%14.10f\n",
+	    gridPartId(grid),"near ghost only   ",gridMinVolume(grid) );
+  }
   fflush(stdout);
 #endif
 }
